@@ -1,8 +1,10 @@
-/* $Id: ChangeLog,v 1.1793 2001-10-26 09:10:57 phaller Exp $ */
+/* $Id: ChangeLog,v 1.1794 2001-10-26 10:04:13 phaller Exp $ */
 
  2001-10-26: Patrick Haller <patrick.haller@innotek.de>
     - USER32:   o fixed ESC keyboard event
                 o fixed passing thru special key events to the frame window
+                o partial fix for shift key processing
+                  remaining issues: AltGr, Right Shift
 
  2001-10-25: Patrick Haller <patrick.haller@innotek.de>
     - USER32:   o fixed scancodes for [Pause] and [PrtScr]
